# BorkBork

./: .gitignore  README.md
client-bork/: Cargo.toml  _app.rs  _event.rs  _ui.rs
client-bork/src/: app.rs  event.rs  events.rs  main.rs  tui.rs  ui.rs
common-bork/: Cargo.toml
common-bork/src/: lib.rs
database/: borkbork.db  schema.sql
protocol/: network_protocol_specification.md
server-bork/: Cargo.toml
server-bork/src/: main.rs
