[package]
name = "client-bork"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
common-bork = {path = "../common-bork/"}

crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
log = "0.4"
ratatui = {version = "0.29.0", features = ["serde", "macros"] }
serde = "1.0.219"
serde_derive = "1.0.219"
simple-logging = "2.0.2"
socket2 = "0.5.10"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
