[package]
name = "client-bork"
version = "0.1.0"
edition = "2024"
description = "a terminal user interface client for a custom chat server"
authors = ["Joe Burchett <5685541+Trogluddite@users.noreply.github.com>"]


[dependencies]
color-eyre = "0.6.5"
common-bork = {path = "../common-bork/"}

crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
log = "0.4"
rand = "0.9.1"
ratatui = {version = "0.29.0", features = ["serde", "macros"] }
simple-logging = "2.0.2"
socket2 = "0.5.10"
tokio = { version = "1.45.1", features = ["full"] }
uuid = {version = "1.17.0", features = ["v4"]}
